# moltbook-filter

./: Cargo.toml  README.md
src/: filter.rs  main.rs  moltbook.rs
